objects/CustomerRSPProducts__c.object
<CustomObject>
    <description>Objeto de integração para receber os produtos e range de preços.</description>
    <fields>
        <fullName>Internal_id_pk__c</fullName>
        <externalId>true</externalId>
        <label>Internal_id_pk</label>
        <length>19</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Profile2_Id__c</fullName>
        <externalId>true</externalId>
        <label>Profile2 Id</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>price_rsp__c</fullName>
        <label>price_rsp</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>price_rsp_max__c</fullName>
        <label>price_rsp_max</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>price_rsp_min__c</fullName>
        <label>price_rsp_min</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sku__c</fullName>
        <externalId>true</externalId>
        <label>sku</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>version_id__c</fullName>
        <label>version_id</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CustomerRSPProducts</label>
    <listViews>
        <fullName>All</fullName>
        <columns>sku__c</columns>
        <columns>price_rsp_max__c</columns>
        <columns>price_rsp_min__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Internal_id_pk__c</columns>
        <columns>price_rsp__c</columns>
        <columns>NAME</columns>
        <columns>Profile2_Id__c</columns>
        <columns>version_id__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
        <language>pt_BR</language>
    </listViews>
    <nameField>
        <label>Nome da CustomerRSPProducts</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomerRSPProducts</pluralLabel>
    <recordTypes>
        <fullName>BRA_Standard</fullName>
        <active>true</active>
        <description>Brazil standard record type</description>
        <label>BRA Standard</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>